--- a/pages/16319.html
+++ b/pages/16319.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -353,7 +352,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -602,17 +601,19 @@ margin-left: 0em;
 
 <h2 id='idea'>Idea</h2>
 
-<p>On <a class='existingWikiWord' href='/nlab/show/super+formal+smooth+infinity-groupoid'>super smooth infinity-groupoids</a> there is a <a class='existingWikiWord' href='/nlab/show/modality'>modal operator</a> <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><mo>⇝</mo></mover></mrow><annotation encoding='application/x-tex'>\stackrel{\rightsquigarrow}{(-)}</annotation></semantics></math> which projects onto the <a class='existingWikiWord' href='/nlab/show/boson'>bosonic</a> components of the <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>. On <a class='existingWikiWord' href='/nlab/show/duality'>formal dual</a> <a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebras</a> this is given by passing to the <em><a class='existingWikiWord' href='/nlab/show/body'>body</a></em>. In terms of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>physical fields</a> this is the projection onto <a class='existingWikiWord' href='/nlab/show/boson'>boson</a> fields, which are hence the <a class='existingWikiWord' href='/nlab/show/modal+type'>modal types</a> of <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇝</mo></mrow><annotation encoding='application/x-tex'>\rightsquigarrow</annotation></semantics></math>, and so it makes sense to speak of the <em>bosonic modality</em>.</p>
+<p>On <a class='existingWikiWord' href='/nlab/show/super+formal+smooth+infinity-groupoid'>super smooth infinity-groupoids</a> there is a <a class='existingWikiWord' href='/nlab/show/modality'>modal operator</a> <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><mo>⇝</mo></mover></mrow><annotation encoding='application/x-tex'>\stackrel{\rightsquigarrow}{(-)}</annotation></semantics></math> which projects onto the <a class='existingWikiWord' href='/nlab/show/boson'>bosonic</a> components of the <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>. On <a class='existingWikiWord' href='/nlab/show/duality'>formal dual</a> <a class='existingWikiWord' href='/nlab/show/super+algebra'>superalgebras</a> this is given by passing to the <em><a class='existingWikiWord' href='/nlab/show/body'>body</a></em>. In terms of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>physical fields</a> this is the projection onto <a class='existingWikiWord' href='/nlab/show/boson'>boson</a> fields, which are hence the <a class='existingWikiWord' href='/nlab/show/modal+type'>modal types</a> of <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇝</mo></mrow><annotation encoding='application/x-tex'>\rightsquigarrow</annotation></semantics></math>, and so it makes sense to speak of the <em>bosonic modality</em>.</p>
 
-<p>This has a <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a> <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇉</mo></mrow><annotation encoding='application/x-tex'>\rightrightarrows</annotation></semantics></math> (which on superalgebras passes to the even-graded sub-algebra) and hence together these form an <a class='existingWikiWord' href='/nlab/show/adjoint+modality'>adjoint modality</a> which may be thought of as characterizing the <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>. See at <em><a href='http://ncatlab.org/nlab/show/super+smooth+infinity-groupoid#Cohesion'>super smooth infinity-groupoid – Cohesion</a></em>. With <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇉</mo></mrow><annotation encoding='application/x-tex'>\rightrightarrows</annotation></semantics></math> being opposite to <math class='maruku-mathml' display='inline' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇝</mo></mrow><annotation encoding='application/x-tex'>\rightsquigarrow</annotation></semantics></math> thereby, it makes sense to call it the <em>fermionic modality</em>.</p>
+<p>This has a <a class='existingWikiWord' href='/nlab/show/left+adjoint'>left adjoint</a> <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇉</mo></mrow><annotation encoding='application/x-tex'>\rightrightarrows</annotation></semantics></math> (which on superalgebras passes to the even-graded sub-algebra) and hence together these form an <a class='existingWikiWord' href='/nlab/show/adjoint+modality'>adjoint modality</a> which may be thought of as characterizing the <a class='existingWikiWord' href='/nlab/show/supergeometry'>supergeometry</a>. See at <em><a href='http://ncatlab.org/nlab/show/super+smooth+infinity-groupoid#Cohesion'>super smooth infinity-groupoid – Cohesion</a></em>. With <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇉</mo></mrow><annotation encoding='application/x-tex'>\rightrightarrows</annotation></semantics></math> being opposite to <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇝</mo></mrow><annotation encoding='application/x-tex'>\rightsquigarrow</annotation></semantics></math> thereby, it makes sense to call it the <em>fermionic modality</em>.</p>
 
 <p>Notice that the fermionic <a class='existingWikiWord' href='/nlab/show/current'>currents</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> (e.g. the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> density current) are indeed fermionic bilinears, i.e. are indeed in the even subalgebras of the underlying superalgebra.</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_60b51f8d6fcc59df3b194ee2ff6bea55c824f2ce_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>fermions</mi></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mover><mo>⊣</mo><mrow></mrow></mover></mtd> <mtd><mover><mrow></mrow><mo>⇝</mo></mover></mtd> <mtd><mi>bosons</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mi>fermions</mi></mtd> <mtd><mo>⇉</mo></mtd> <mtd><mover><mo>⊣</mo><mrow></mrow></mover></mtd> <mtd><mo>⇝</mo></mtd> <mtd><mi>bosons</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
-    fermions &amp; \rightrightarrows &amp;\stackrel{}{\dashv}&amp; \stackrel{\rightsquigarrow}{} &amp; bosons
+    fermions &amp; \rightrightarrows &amp;\stackrel{}{\dashv}&amp; \rightsquigarrow &amp; bosons
   }
 
 </annotation></semantics></math></div>
+<p>The <a class='existingWikiWord' href='/nlab/show/modal+type'>modal objects</a> for <math class='maruku-mathml' display='inline' id='mathml_14bac411a0e2781738a3b17c08c6ae7676350b0e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⇝</mo></mrow><annotation encoding='application/x-tex'>\rightsquigarrow</annotation></semantics></math> are the <em>bosonic objects</em>.</p>
+
 <p>The <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoint</a> of the bosonic modality is the <em><a class='existingWikiWord' href='/nlab/show/rheonomy+modality'>rheonomy modality</a></em>.</p>
 
 <p>
@@ -621,22 +622,27 @@ margin-left: 0em;
 <p>
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 24, 2017 14:31:48 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  <p>
+  Last revised on June 26, 2018 at 15:34:26.
+  See the <a href="https://ncatlab.org/nlab/history/bosonic modality" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bosonic+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bosonic+modality/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/bosonic+modality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bosonic+modality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/bosonic+modality" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bosonic+modality/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/bosonic+modality" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bosonic+modality" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/bosonic modality/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/bosonic+modality" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/bosonic+modality" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/bosonic+modality" id="view_source" rel="nofollow">Source</a>
