--- a/pages/17994.html
+++ b/pages/17994.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,9 +311,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>universal complex line bundle</em> is the <a class='existingWikiWord' href='/nlab/show/complex+vector+bundle'>complex</a> <a class='existingWikiWord' href='/nlab/show/universal+vector+bundle'>universal vector bundle</a> of <a class='existingWikiWord' href='/nlab/show/rank'>rank</a> 1, hence the <a class='existingWikiWord' href='/nlab/show/line+bundle'>complex line bundle</a> which is <a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated</a> to the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a>-<a class='existingWikiWord' href='/nlab/show/universal+principal+bundle'>universal principal bundle</a> <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>E U(1)</annotation></semantics></math> over the <a class='existingWikiWord' href='/nlab/show/classifying+space'>classifying space</a> <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B U(1)</annotation></semantics></math> via the canonical <a class='existingWikiWord' href='/nlab/show/action'>action</a> of <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>U(1)</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>.</p>
+<p>The <em>universal complex line bundle</em> is the <a class='existingWikiWord' href='/nlab/show/complex+vector+bundle'>complex</a> <a class='existingWikiWord' href='/nlab/show/universal+vector+bundle'>universal vector bundle</a> of <a class='existingWikiWord' href='/nlab/show/rank'>rank</a> 1, hence the <a class='existingWikiWord' href='/nlab/show/line+bundle'>complex line bundle</a> which is <a class='existingWikiWord' href='/nlab/show/associated+bundle'>associated</a> to the <a class='existingWikiWord' href='/nlab/show/circle+group'>circle group</a>-<a class='existingWikiWord' href='/nlab/show/universal+principal+bundle'>universal principal bundle</a> <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>E U(1)</annotation></semantics></math> over the <a class='existingWikiWord' href='/nlab/show/classifying+space'>classifying space</a> <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>B U(1)</annotation></semantics></math> via the canonical <a class='existingWikiWord' href='/nlab/show/action'>action</a> of <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>U(1)</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{C}</annotation></semantics></math>.</p>
 
-<p>Its <a class='existingWikiWord' href='/nlab/show/pullback+bundle'>pullback bundle</a> along the canonucl inclusion <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>2</mn></msup><mo>⟶</mo><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S^2 \longrightarrow B U(1)</annotation></semantics></math> (the map which represents <math class='maruku-mathml' display='inline' id='mathml_6ef6ba00b8208b49ccf0483eac2c334a926a01e1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>∈</mo><msub><mi>π</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>≃</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>1 \in \pi_2(B U(1)) \simeq \mathbb{Z}</annotation></semantics></math>) is the <em><a class='existingWikiWord' href='/nlab/show/basic+complex+line+bundle+on+the+2-sphere'>basic complex line bundle on the 2-sphere</a></em>.</p>
+<p>Its <a class='existingWikiWord' href='/nlab/show/pullback+bundle'>pullback bundle</a> along the canonical inclusion <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>S</mi> <mn>2</mn></msup><mo>⟶</mo><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>S^2 \longrightarrow B U(1)</annotation></semantics></math> (the map which represents <math class='maruku-mathml' display='inline' id='mathml_b259ea1e96797f929ddf11bfe4f6b836324215c2_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>∈</mo><msub><mi>π</mi> <mn>2</mn></msub><mo stretchy='false'>(</mo><mi>B</mi><mi>U</mi><mo stretchy='false'>(</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>≃</mo><mi>ℤ</mi></mrow><annotation encoding='application/x-tex'>1 \in \pi_2(B U(1)) \simeq \mathbb{Z}</annotation></semantics></math>) is the <em><a class='existingWikiWord' href='/nlab/show/basic+complex+line+bundle+on+the+2-sphere'>basic complex line bundle on the 2-sphere</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -337,19 +336,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  6, 2017 07:28:40 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.77.226.246)
+  <p>
+  Last revised on June 27, 2018 at 17:45:53.
+  See the <a href="https://ncatlab.org/nlab/history/universal complex line bundle" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+complex+line+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+complex+line+bundle/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/universal+complex+line+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+complex+line+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/universal+complex+line+bundle" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+complex+line+bundle/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/universal+complex+line+bundle" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+complex+line+bundle" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/universal complex line bundle/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/universal+complex+line+bundle" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/universal+complex+line+bundle" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/universal+complex+line+bundle" id="view_source" rel="nofollow">Source</a>
